tests/neg/i13570.check
-- Error: tests/neg/i13570.scala:8:5 -----------------------------------------------------------------------------------
8 |  jim(Seq(1,2)) // error
  |  ^^^^^^^^^^^^^
  |  cannot reduce inline match with
  |   scrutinee:  seq$proxy1 : (seq$proxy1 : Seq[Int])
  |   patterns :  case s @ _:Seq[Int] if s.isEmpty
  |               case s @ _:Seq[Int]
  |               case _
  |---------------------------------------------------------------------------------------------------------------------
  |Inline stack trace
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  |This location contains code that was inlined from i13570.scala:3
3 |    inline seq match
  |           ^
4 |      case s: Seq[Int] if s.isEmpty => println("seq is empty")
5 |      case s: Seq[Int] => println("seq is not empty")
6 |      case _ => println("somthing hinky happened")
   ---------------------------------------------------------------------------------------------------------------------
